envoy-gateway/BackendTrafficPolicy/healthcheck.yaml
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: BackendTrafficPolicy
metadata:
  name: healthcheck
spec:
  targetRef:
    group: gateway.networking.k8s.io
    kind: HTTPRoute
    name: http-with-healthcheck
  healthCheck:
    active:
      healthyThreshold: 1
      interval: 10s
      tcp: {}
      timeout: 1s
      type: TCP
      unhealthyThreshold: 1
    panicThreshold: 1
    passive:
      baseEjectionTime: 30s
      consecutive5XxErrors: 0
      consecutiveLocalOriginFailures: 2
      interval: 3s
      maxEjectionPercent: 100
      splitExternalLocalOriginErrors: true
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: eg
spec:
  gatewayClassName: eg
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: All
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-with-healthcheck
spec:
  parentRefs:
    - name: eg
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /healthcheck
      backendRefs:
        - name: backend
          port: 3000
