envoy-gateway/BackendTrafficPolicy/retry-budget.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: same-namespace
spec:
  gatewayClassName: eg
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: All
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: BackendTrafficPolicy
metadata:
  name: circuitbreaker-example
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: http-with-circuitbreaker
  circuitBreaker:
    maxConnections: 0
    maxParallelRequests: 0
    maxPendingRequests: 0
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-with-circuitbreaker
spec:
  parentRefs:
    - name: same-namespace
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /circuitbreaker
      backendRefs:
        - name: backend
          port: 3000
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: BackendTrafficPolicy
metadata:
  name: circuitbreaker-retry-budget
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: http-with-retry-budget
  retry:
    retryOn:
      httpStatusCodes:
        - 503
  circuitBreaker:
    # maxConnections: 0
    # maxParallelRequests: 0
    # maxPendingRequests: 0
    retryBudget:
      percent:
        numerator: 0
      minRetryConcurrency: 0
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-with-retry-budget
spec:
  parentRefs:
    - name: same-namespace
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /status
      backendRefs:
        - name: backend
          port: 3000
